Add public thread status feedback
